including downloaded cdns

--- a/options/home.html
+++ b/options/home.html
@@ -8,11 +8,11 @@
     <title>Document</title>
 
     <!-- Latest compiled and minified CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../scripts/bs.css" rel="stylesheet">
 
     <link href="options.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body>
@@ -79,6 +79,8 @@
     <button onClick="window.location.href=window.location.href" type="button" id="clear">
         Clear
     </button>
+    <!-- Javascript -->
+    <script src="../scripts/bs.js"></script>
 
     <script src="options.js"></script>
 </body>
