--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../scripts/bs.css" rel="stylesheet">
 
     <link href="popup.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+
 
 
     <title>Pondr Popup</title>
@@ -77,6 +77,8 @@
     </div>
 
     <!-- Javascript -->
+    <script src="bs.js"></script>
+
     <script src="popup.js"></script>
 </body>
 
