add margin top to rows

--- a/options/home.html
+++ b/options/home.html
@@ -81,7 +81,7 @@
 
                         <div class="container" id="home-bookmarks-list">
                             <!-- need to recreate in JS -->
-                            <article class = "row d-flex justify-content-between">
+                            <article class = "row d-flex justify-content-between mt-4">
                                 <div class="col-3"> 
                                     <!-- start of bookmark card -->
                                     <div class="bookmark-card container">
@@ -159,21 +159,91 @@
                                     <!-- end of bookmark card -->
                                 </div>
                             </article>
-                        </div>
 
-                        <!-- <article id="tab_history">
-                            <ol id="tab">
+                            <article class = "row d-flex justify-content-between mt-4">
+                                <div class="col-3"> 
+                                    <!-- start of bookmark card -->
+                                    <div class="bookmark-card container">
+                                        <div class="row">
+                                            <div class="dropdown col d-flex justify-content-start align-self-center">
+                                                <a class="btn" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                    <i class=" col material-icons">menu</i>
+                                                </a>
+                                                <ul class="dropdown-menu">
+                                                  <li><button class="dropdown-item" role="button">Next Week</button></li>
+                                                  <li><button class="dropdown-item" role="button">Reschedule</button></li>
+                                                  <li><button class="dropdown-item" role="button">Delete</button></li>
+                                                </ul>
+                                            </div>
+                                            <!-- add an onClick to change to pinned and change color -->
+                                            <div class="col"><i class="d-flex justify-content-end material-icons mt-2">push_pin</i></div>
+                                        </div>
+                                        <div class="card-body container">
+                                            <div class="row">
+                                                <h5 class="col d-flex justify-content-center">Website Name</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- end of bookmark card -->
+                                </div>
+                                <div class="col-3">
+                                    <!-- start of bookmark card -->
+                                    <div class="bookmark-card container">
+                                        <div class="row">
+                                            <div class="dropdown col d-flex justify-content-start align-self-center">
+                                                <a class="btn" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                    <i class=" col material-icons">menu</i>
+                                                </a>
+                                                <ul class="dropdown-menu">
+                                                  <li><button class="dropdown-item" role="button">Next Week</button></li>
+                                                  <li><button class="dropdown-item" role="button">Reschedule</button></li>
+                                                  <li><button class="dropdown-item" role="button">Delete</button></li>
+                                                </ul>
+                                            </div>
+                                            <!-- add an onClick to change to pinned and change color -->
+                                            <div class="col"><i class="d-flex justify-content-end material-icons mt-2">push_pin</i></div>
+                                        </div>
+                                        <div class="card-body container">
+                                            <div class="row">
+                                                <h5 class="col d-flex justify-content-center">Website Name</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- end of bookmark card -->
+                                </div>
+
+                                <div class="col-3"> 
+                                    <!-- start of bookmark card -->
+                                    <div class="bookmark-card container">
+                                        <div class="row">
+                                            <div class="dropdown col d-flex justify-content-start align-self-center">
+                                                <a class="btn" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                    <i class=" col material-icons">menu</i>
+                                                </a>
+                                                <ul class="dropdown-menu">
+                                                  <li><button class="dropdown-item" role="button">Next Week</button></li>
+                                                  <li><button class="dropdown-item" role="button">Reschedule</button></li>
+                                                  <li><button class="dropdown-item" role="button">Delete</button></li>
+                                                </ul>
+                                            </div>
+                                            <!-- add an onClick to change to pinned and change color -->
+                                            <div class="col"><i class="d-flex justify-content-end material-icons mt-2">push_pin</i></div>
+                                        </div>
+                                        <div class="card-body container">
+                                            <div class="row">
+                                                <h5 class="col d-flex justify-content-center">Website Name</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- end of bookmark card -->
+                                </div>
+                            </article>
                             
-                            </ol>
-    
-                        </article> -->
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <button onClick="window.location.href=window.location.href" type="button" id="clear">
-            Clear
-        </button>
     </main>
     <!-- Javascript -->
     <script src="../scripts/bs.js"></script>
