add notes on how to set up js files

--- a/options/home.html
+++ b/options/home.html
@@ -71,12 +71,12 @@
                     <h1 class="display-1"><b>Hey Kenny!</b></h1>
                     <p class="text-muted p-lead"> Here's what's coming up this week</p>
                 
-                    <div class="container d-none" id="no-bookmarks">
+                    <div class="container" id="no-bookmarks">
                         <img class="mt-5" src="../assets/icons/Stuck at Home - To Do List.png">
                         <p class="text-muted p-lead">Looks like a clear week ahead!</p>
                     </div>
 
-                    <div class="container mt-5" id="has-bookmark">
+                    <div class="container mt-5 d-none" id="has-bookmark">
                         <div class="row"><p class="lead text-muted text-start col">Upcoming</p></div> 
 
                         <div class="container" id="home-bookmarks-list">
@@ -238,7 +238,6 @@
                                     <!-- end of bookmark card -->
                                 </div>
                             </article>
-                            
                         </div>
                     </div>
                 </div>
