creating object + uuid integration

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -77,8 +77,12 @@
 
     <!-- Javascript -->
     <script src="../scripts/bs.js"></script>
+    <script type="module" src="../node_modules/uuid/dist/esm-browser/v4.js"></script>
 
-    <script src="popup.js"></script>
+
+
+
+    <script type="module" src="popup.js"></script>
 </body>
 
 </html>
