--- a/options/options.html
+++ b/options/options.html
@@ -21,7 +21,7 @@
 
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand logo-text ms-4" href="#">
-                    <img src="../assets/icons/pondr_32.png" width="30" height="30"
+                    <img src="../assets/icons/og_pondr_48.png" width="30" height="30"
                         class="d-inline-block align-content-center" alt="">
                     Pondr
                 </a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -79,7 +79,7 @@
             </div>
 
         </div>
-        <button onClick="window.location.href=window.location.href" type="button" id="clear">
+        <button class="btn btn-danger float-end" type="button" id="clear">
             Clear
         </button>
     </main>
